# nuagecron

./: .gitignore  .serverless-wsgi  LICENSE.md  README.md  deploy.sh  package.json  pyproject.toml  sample.env  serverless.yml  servicename.json
.github/workflows/: workflow.yml
.serverless/: requirements.txt
api/: .serverless-wsgi  app.py  serverless_wsgi.py
frontend/: package.json  sample.env
frontend/src/: Api.js  App.js  Authentication.js  auth0-with-navigate.js  index.js
frontend/src/components/: CreateScheduleModal.js  LoginButton.js  LogoutButton.js  Profile.js
frontend/src/schedules/: MaterialTable.js  ScheduleTable.js
frontend/src/views/: ErrorPage.js  ExecutionsTable.js  ScheduleTable.js  ScheduleView.js
nuagecron/: __init__.py  servicename.json
nuagecron/adapters/aws/: __init__.py  adapters.py  lambdas.py
nuagecron/api/: app.py  serverless_wsgi.py
nuagecron/api/aws/: adapters.py  lambdas.py
nuagecron/api/aws_lambdas/: updater.py
nuagecron/api/endpoints/: executions.py  schedules.py
nuagecron/cli/: cli.py
nuagecron/core/actions/: executions.py  schedules.py
nuagecron/core/adapters/: base_compute_adapter.py  base_database_adapter.py  utils.py
nuagecron/core/executors/: __init__.py  base_executor.py  lambda_executor.py
nuagecron/core/functions/: executor.py  tick.py  updater.py
nuagecron/core/handlers/: executions.py  schedules.py
nuagecron/core/models/: executions.py  schedule_set.py  schedules.py  utils.py
nuagecron/domain/adapters/: base_database_adapter.py  utils.py
nuagecron/domain/executors/: __init__.py  base_executor.py  lambda_executor.py
nuagecron/domain/functions/: executor.py  tick.py  updater.py
nuagecron/domain/models/: executions.py  schedule_set.py  schedules.py  utils.py
nuagecron/domain/utils/: utils.py
nuagecron/service/: app.py  wsgi_handler.py
nuagecron/service/adapters/: aws_adapters.py
nuagecron/service/aws_lambdas/: executor.py  tick.py  updater.py
nuagecron/service/compute_adapters/: aws_compute_adapter.py  base_compute_adapter.py  base_function_adapter.py
nuagecron/service/db_adapters/: base_adapter.py  dynamodb_adapter.py
nuagecron/service/endpoints/: executions.py  schedules.py
terraform/: aws.tf  lambdas.tf
tests/: adapters.py  conftest.py  e2e_test.py  functions_test.py  handlers_test.py
tests/aws/: dynamo_test.py
(+4 files in other folders)
