[tool.poetry]
name = "nuagecron"
version = "0.1.0"
description = "A multi-tenant serverless scheduler"
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
boto3 = "^1.20.24"
click = "^8.0.3"
pynamodb = "^5.1.0"
Flask = "^2.0.2"
crontab = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
