[tool.poetry]
name = "nuagecron"
version = "0.1.0"
description = "A multi-tenant serverless scheduler"
authors = ["Your Name <you@example.com>"]
license = "MIT License"

packages = [
    { include = "cli", from = "nuagecron" },
    { include = "domain", from = "nuagecron" }
]
include = ["nuagecron/__init__.py", "nuagecron/servicename.json"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
boto3 = "^1.20.24"
click = "^8.0.3"
Flask = "^2.0.2"
crontab = "^0.23.0"
pip = "^21.3.1"
Werkzeug = "^2.0.2"
dynamodb-json = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.920"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nuagecron = "nuagecron.cli.cli:main"